--- a/README
+++ b/README
@@ -17,6 +17,13 @@ Quick Sort
 Block Puzzle
 - To solve the game
 
+LeetCode
+========
+String Problems
+- Reverse words
+- Valid Palindrome
+- String multiply
+
 Utilities
 =========
 Stopwatch
